# notifier_bot

./: .gitignore  Dockerfile  Notes.txt  README.md  main_api.py  main_bot.py
fast-api/: README.md  client_example.py  main.py  pyproject.toml
fast-api/src/: RequestLimiter.py  db_functions.py  logger.py  models.py
fast-api/tests/: test_main.py
fast_api/: README.md  main.py  pyproject.toml
fast_api/src/: db_functions.py  logger.py
fast_api/tests/: test_main.py
lib/: db_create.py
telegram-bot/: README.md  fast_api.py  main.py  main_bot.py  main_bot2.py  pyproject.toml  start.py  t.py
telegram-bot/databases/: main_bot.db
telegram-bot/src/: callback_handlers.py  command_handlers.py  db_functions.py  dto.py  functions.py  logger.py  messages.py  settings.py  start_bot.py
telegram-bot/telegram-bot-template-master/: README.md
telegram-bot/test/: auth_example.py  database.py  example.py  main.py  schedule_test.py  secrets.py  test.db
telegram_bot/: README.md  pyproject.toml
telegram_bot/src/: callback_handlers.py  command_handlers.py  db_functions.py  logger.py
