[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Vankad24 <vankad24@mail.ru>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.12.0"
apscheduler = "^3.10.1"
aiohttp = "^3.8.4"
pydantic = {version = "1.10.11", extras = ["dotenv"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
